Fix build with latest Fontconfig changes

It seems that fontconfig split a header https://github.com/fontconfig/fontconfig/commit/b4b753d66dea17d645166adca239a0fba84d03a9

BUG: 512270
FIXED-IN: 6.6